{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 13,
  "lineage": "ca951273-350c-5f94-fb8b-669d7ca75cf7",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319275316539:security-group/sg-07a677867ae44db86",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a677867ae44db86",
            "ingress": [],
            "name": "terraform-20220812191308453800000001",
            "name_prefix": "terraform-",
            "owner_id": "319275316539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bono-sg"
            },
            "tags_all": {
              "Name": "bono-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-002593b539316dd70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319275316539:internet-gateway/igw-04c80b9849081ab8b",
            "id": "igw-04c80b9849081ab8b",
            "owner_id": "319275316539",
            "tags": {
              "Name": "bono-igw"
            },
            "tags_all": {
              "Name": "bono-igw"
            },
            "vpc_id": "vpc-002593b539316dd70"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319275316539:route-table/rtb-0523094cc6909b342",
            "id": "rtb-0523094cc6909b342",
            "owner_id": "319275316539",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c80b9849081ab8b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bono-rtb"
            },
            "tags_all": {
              "Name": "bono-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-002593b539316dd70"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d2fb750c1bfaabc",
            "route_table_id": "rtb-0523094cc6909b342",
            "subnet_id": "subnet-0bb9ae6f17f7f981b"
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_route_table.new-rtb",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06441baabb0b83880",
            "route_table_id": "rtb-0523094cc6909b342",
            "subnet_id": "subnet-009d24496de156c76"
          },
          "dependencies": [
            "module.new-vpc.aws_internet_gateway.new-igw",
            "module.new-vpc.aws_route_table.new-rtb",
            "module.new-vpc.aws_subnet.subnets",
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319275316539:subnet/subnet-0bb9ae6f17f7f981b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb9ae6f17f7f981b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "319275316539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bono-subnet-0"
            },
            "tags_all": {
              "Name": "bono-subnet-0"
            },
            "vpc_id": "vpc-002593b539316dd70"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319275316539:subnet/subnet-009d24496de156c76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009d24496de156c76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "319275316539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bono-subnet-1"
            },
            "tags_all": {
              "Name": "bono-subnet-1"
            },
            "vpc_id": "vpc-002593b539316dd70"
          },
          "dependencies": [
            "module.new-vpc.aws_vpc.new-vpc",
            "module.new-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.new-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319275316539:vpc/vpc-002593b539316dd70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c1672b4a3c0ad64",
            "default_route_table_id": "rtb-0b51bdc90f2a49395",
            "default_security_group_id": "sg-0bc39964455a20fc8",
            "dhcp_options_id": "dopt-7c741c06",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-002593b539316dd70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b51bdc90f2a49395",
            "owner_id": "319275316539",
            "tags": {
              "Name": "bono-vpc"
            },
            "tags_all": {
              "Name": "bono-vpc"
            }
          }
        }
      ]
    }
  ]
}